--- a/website_form_recaptcha/views/contactus.xml
+++ b/website_form_recaptcha/views/contactus.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-	<template id="inteco_contactus" inherit_id="website.contactus" name="Contact Us">
-		<xpath expr="//div[@id='wrap']/div[2]/div/div[1]/div" position="inside">
+	<template id="gio" inherit_id="website_form.contactus_form" name="Contact Us">
+		<xpath expr="//div/form/div[6]" position="after">
 			<div class="form-group row form-field o_website_form_required_custom">
-				<label class="col-lg-3 col-md-4 col-form-label" for="g-recaptcha-response">Human?</label>
+				<label class="col-lg-3 col-md-4 col-form-label" for="g-recaptcha-response"></label>
 				<div class="col-lg-7 col-md-8">
 					<span class="o_website_form_recaptcha" required="" />
 				</div>
